--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -68,3 +68,13 @@ body {
   margin-top: 5px;
   display: block;
 }
+
+a {
+  color: #333;
+  text-decoration: none;
+}
+
+/* Active route */
+.active {
+  color: #005bb3;
+}
